--- a/LLama.Web/Pages/Shared/_Layout.cshtml
+++ b/LLama.Web/Pages/Shared/_Layout.cshtml
@@ -5,82 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LLamaSharp Web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/lib/katex/dist/katex.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="icon" href="~/image/llama-sharp.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom">
-            <div class="container-fluid">
-                <img src="~/image/llama-sharp.png" class="navbar-image" />
-                <a class="navbar-brand" asp-area="" asp-page="/Index">LLamaSharp Web</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/Index"></a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown theme">
-                            <a id="bd-theme" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Theme
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#" class="dropdown-item" data-bs-theme-value="light">
-                                        <i class="bi bi-brightness-high pe-2"></i>
-                                        Light
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="dropdown-item d-flex" data-bs-theme-value="dark">
-                                        <i class="bi bi-moon-stars pe-2"></i>
-                                        Dark
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="dropdown-item d-flex" data-bs-theme-value="auto">
-                                        <i class="bi bi-circle-half pe-2"></i>
-                                        Auto
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <div class="vr h-100 mx-2"></div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/SciSharp/LLamaSharp" target="_blank">
-                                <div class="d-flex flex-row align-items-center">
-                                    <h5 class="mb-0" title="LLamaSharp on GitHub">
-                                        <i class="bi bi-github"></i>
-                                    </h5>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main class="container-fluid" role="main">
+    <main role="main">
         @RenderBody()
     </main>
 
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/jquery.unobtrusive-ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="~/lib/mustache/mustache.js"></script>
-    <script src="~/lib/signalr/signalr.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/katex/dist/katex.min.js"></script>
+    <script src="~/lib/markdown-it/dist/markdown-it.min.js"></script>
+    <script src="~/lib/markdown-it-katex/browser.js"></script>
+    <script src="~/lib/markdown-it-task-lists/dist/markdown-it-task-lists.min.js"></script>
+    <script src="~/lib/markdown-it-footnote/dist/markdown-it-footnote.min.js"></script>
+    <script src="~/lib/markdown-it-deflist/dist/markdown-it-deflist.min.js"></script>
+    <script src="~/lib/markdown-it-sub/dist/markdown-it-sub.min.js"></script>
+    <script src="~/lib/markdown-it-sup/dist/markdown-it-sup.min.js"></script>
+    <script src="~/lib/markdown-it-mark/dist/markdown-it-mark.min.js"></script>
+    <script src="~/lib/markdown-it-emoji/dist/markdown-it-emoji.min.js"></script>
+    <script src="~/lib/mermaid/dist/mermaid.min.js"></script>
     <script src="~/js/theme.js" asp-append-version="true"></script>
+    <script src="~/js/blazorChat.js" asp-append-version="true"></script>
+    <script src="_framework/blazor.server.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
